--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script src=”https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js”></script>
+
+    <title>TesseReact</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
